# c2pa-c

./: .gitignore  CMakeLists.txt  Cargo.toml  Dockerfile  Makefile  cbindgen.toml  targets.txt
examples/: CMakeLists.txt  demo.cpp  training.cpp
include/: c2pa.h  c2pa.hpp
src/: CMakeLists.txt  c2pa.cpp  c_api.rs  c_stream.rs  cpp_io_stream.h
tests/: CMakeLists.txt  builder.test.cpp  cmd_signer.cpp  read_file.test.cpp  reader.test.cpp  test.c  test.cpp  test_signer.cpp  test_signer.hpp  unit_test.h  version.test.cpp
